--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lint:fix": "eslint --fix ."
     },
     "devDependencies": {
+        "commitizen": "^4.2.4",
         "cz-conventional-changelog": "^3.0.1",
         "eslint": "^7.12.1",
         "eslint-config-prettier": "^8.3.0",
@@ -28,5 +29,10 @@
         "express": "^4.18.2",
         "moment-timezone": "^0.5.40",
         "winston": "^3.8.2"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
