--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,16 @@
 {
-    "root": true,
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "extends": ["eslint:recommended", "prettier"],
     "env": {
-        "es2021": true,
-        "node": true
+        "node": true,
+        "es6": true
+    },
+    "extends": ["eslint:recommended"],
+    "parserOptions": {
+        "ecmaVersion": 2021
     },
     "rules": {
-        "no-console": "error"
+        "semi": ["error", "always"],
+        "quotes": ["error", "single"],
+        "no-console": "off",
+        "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
     }
 }
