--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "desafio-iblue",
+    "name": "monopoly-simulator",
     "version": "0.0.1",
     "main": "index.js",
     "author": "Kevin Oliveira Manhas",
     "license": "MIT",
     "scripts": {
-        "start": "node desafio-iblue.js",
+        "start": "node monopoly-simulator.js",
         "commit": "cz",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
@@ -25,6 +25,7 @@
         "prettier": "^2.4.1"
     },
     "dependencies": {
+        "celebrate": "^15.0.1",
         "dotenv": "^10.0.0",
         "express": "^4.18.2",
         "moment-timezone": "^0.5.40",
