--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,48 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
+EditorConfig helps maintain consistent coding styles for multiple developers working on the same project.
+Learn more at https://editorconfig.org
+top-most EditorConfig file
 root = true
 
 [*]
 indent_style = space
-indent_size = 4
+indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
+
+[*.yml]
+indent_size = 2
+
+[*.json]
+indent_size = 2
+
+[*.js]
+indent_size = 2
+
+[*.ts]
+indent_size = 2
+
+[*.html]
+indent_size = 2
+
+[*.css]
+indent_size = 2
+
+[*.scss]
+indent_size = 2
+
+[*.vue]
+indent_size = 2
+
+[*.php]
+indent_size = 2
+
+[*.py]
+indent_size = 4
