--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-    "name": "monopoly-simulator",
-    "version": "0.0.1",
-    "main": "index.js",
-    "author": "Kevin Oliveira Manhas",
-    "license": "MIT",
-    "scripts": {
-        "start": "node monopoly-simulator.js",
-        "commit": "cz",
-        "format:check": "prettier --check .",
-        "format:write": "prettier --write .",
-        "lint:check": "eslint .",
-        "lint:fix": "eslint --fix ."
-    },
-    "devDependencies": {
-        "commitizen": "^4.2.4",
-        "cz-conventional-changelog": "^3.0.1",
-        "eslint": "^7.12.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-promise": "^5.0.0",
-        "prettier": "^2.4.1"
-    },
-    "dependencies": {
-        "celebrate": "^15.0.1",
-        "dotenv": "^10.0.0",
-        "express": "^4.18.2",
-        "moment-timezone": "^0.5.40",
-        "winston": "^3.8.2"
-    },
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-conventional-changelog"
-        }
+  "name": "monopoly-simulator",
+  "version": "0.0.1",
+  "main": "monopoly-simulator.js",
+  "author": "Kevin Oliveira Manhas",
+  "license": "MIT",
+  "scripts": {
+    "start": "node monopoly-simulator.js",
+    "commit": "cz",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix ."
+  },
+  "devDependencies": {
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.0.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.0.0",
+    "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "celebrate": "^15.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.18.2",
+    "moment-timezone": "^0.5.40",
+    "winston": "^3.8.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
+  }
 }
